Fix flexbox behavior and alignment in work section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 
 /* HEADER AND NAVIGATION SECTION */
 header {
-    padding: 35px;
+    /* padding: 35px; */
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #333333;
     color:#333333;
@@ -40,6 +40,11 @@ h1 {
     left:0;
     top: 12px; */
     margin-left: -40px;
+}
+
+h2 {
+  font-size: 28px;
+  color: #333333;
 }
 
 nav {
@@ -85,6 +90,7 @@ h3 {
   font-size: 26px;
   background-color: lightblue;
   color: #333333;
+  text-align: right;
 }
 
 /* About Section */
@@ -94,31 +100,25 @@ section {
     padding: 20px 10px;
     width: 100%;
     margin: 20px 0px;
-    border: 5px solid purple;
 }
 
 .container-section {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
   width: 100%;
-  border: 5px solid brown;
-
 }
 
 .section_title{
-  font-size: 30px;
   text-align: right;
-  width: 25%;
-  border-right: 5px solid black;
+  width: 15%;
+  border-right: 5px solid #333333;
   padding: 10px;
-  border: 8px solid red;
 }
 
 .contents{
   margin: 10px;
-  width: 73%;
-  border: 5px solid yellow;
+  width: 85%;
 }
 
 .one{
@@ -132,9 +132,11 @@ section {
 .work-images-container {
   display: flex;
   flex-wrap: wrap;
+  /* display: grid;
+  grid-template-columns: repeat(2, 1fr); */
   justify-content: space-between;
+  /* justify-content: center; */
   width: 100%;
-  border: 5px solid rgb(5, 206, 22);
 }
 
 /*
@@ -158,8 +160,6 @@ section {
   position: absolute;
   bottom: 20px;
   background-color: aqua;
-  
-
 }
 
 h4 {
@@ -184,9 +184,9 @@ h4 {
 }
 
 .flamingo, 
-.neon {
+.neon, .plants, .mts {
   position: relative;
-  width: 50%;
+  width: 47%;
   height: 200px;
   /*background-image: url("../images/IMG_0022.jpg");
   background-position: center;
@@ -220,13 +220,23 @@ h4 {
       /*background-position: center; */
   }
 
-  .led-wall {
-      width: 45%;
+  .flamingo, .neon, .plants, .mts  {
+      width: 50%;
       height: 200px;
      /* background-position: center;
       background-size: cover; */
   } 
+
 }
+
+@media screen and (max-width: 900px) {
+
+  .flamingo, .neon, .plants, .mts  {
+    height: 100px;
+  }
+
+}
+
   @media screen and (max-width: 768px) {
     /* Use flex-direction to stack the navbar, sidebar, and body */
     
@@ -236,12 +246,15 @@ h4 {
       flex-direction: column;
       text-align: center;
     } 
+
+    .work-images-container {
+      justify-content: center;
+    }
     
     h1 {
       padding: 0 8px 0px 8px;
       font-size: 36px;
       background-color: lightblue;
-      border: 5px solid red;
       margin-left: 0px;
     }
 
@@ -254,14 +267,15 @@ h4 {
     text-align: center;
     width: 25%;
     padding: 10px;
-    border: 8px solid red;
+    border: none;
+    
   }
 
   .surf-report {
     height: 150px;
 }
 
-.led-wall{
+.flamingo, .neon, .plants, .mts  {
     height: 100px;
 }
     /* Make the sidebar stack below the body */
@@ -278,7 +292,7 @@ h4 {
         height: 100px;
     }
 
-    .led-wall {
+    .flamingo, .neon, .plants, .mts  {
         height: 100px;
     }
     }
